[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/hud/player_info.gd" type="Script" id=1]
[ext_resource path="res://src/hud/hud_theme.tres" type="Theme" id=2]

[node name="PlayerInfo" type="GridContainer"]
margin_right = 320.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveTitle" type="Label" parent="."]
margin_right = 144.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Move (Click):"
align = 1

[node name="SkillTitle" type="Label" parent="."]
margin_left = 148.0
margin_right = 320.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Skill (Shift + Click):"
align = 1

[node name="MoveHBoxContainer" type="HBoxContainer" parent="."]
margin_top = 29.0
margin_right = 144.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoveIcon" type="TextureRect" parent="MoveHBoxContainer"]
margin_top = 49.0
margin_bottom = 49.0
size_flags_vertical = 4

[node name="MoveInfo" type="RichTextLabel" parent="MoveHBoxContainer"]
margin_left = 4.0
margin_top = 36.0
margin_right = 144.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
fit_content_height = true

[node name="SkillHBoxContainer" type="HBoxContainer" parent="."]
margin_left = 148.0
margin_top = 29.0
margin_right = 320.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SkillIcon" type="TextureRect" parent="SkillHBoxContainer"]
margin_top = 49.0
margin_bottom = 49.0
size_flags_vertical = 4

[node name="SkillInfo" type="RichTextLabel" parent="SkillHBoxContainer"]
margin_left = 4.0
margin_top = 36.0
margin_right = 172.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
fit_content_height = true
